[gd_scene format=3 uid="uid://ddjkpitw1o2xu"]

[ext_resource type="Script" uid="uid://buduawctj7juf" path="res://Scripts/Utils/main_menu.gd" id="1_vytfc"]
[ext_resource type="Theme" uid="uid://dc1cc6r6c43sd" path="res://Themes & Materials/Theme/personalized_theme.tres" id="2_gnv55"]
[ext_resource type="Script" uid="uid://dadsukldygahu" path="res://Scripts/Decoration & Visuals/button_effects_module.gd" id="3_b7svq"]
[ext_resource type="VideoStream" uid="uid://hf2t57flg264" path="res://Assets/GIFS/sea03.ogv" id="3_t475i"]
[ext_resource type="PackedScene" uid="uid://bk1n0jj4xvseh" path="res://Scenes/Levels/level_show_info.tscn" id="3_xg7my"]
[ext_resource type="PackedScene" uid="uid://dpnemmdmxf2a3" path="res://Scenes/Decoration/candle_menu.tscn" id="5_wmo1h"]
[ext_resource type="Script" uid="uid://1w16umy3lb4q" path="res://Assets/Fonts/title_text_effect.gd" id="6_gnv55"]

[sub_resource type="Animation" id="Animation_xg7my"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Button2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Button:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Main Manu Label:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Candle Menu:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(160, 700)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Candle Menu:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Candle Menu:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, 5)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Background Animated:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.09877711, 0.6643007, 0.68718815, 1)]
}

[sub_resource type="Animation" id="Animation_wmo1h"]
resource_name = "hide_menu"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Button2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Button:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Main Manu Label:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Candle Menu:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(160, 700), Vector2(160, 1400)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Candle Menu:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.73333335),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Candle Menu:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(5, 5), Vector2(1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Background Animated:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.77),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.09803922, 0.6627451, 0.6862745, 1), Color(0.5647059, 0.5176471, 0.92156863, 1)]
}

[sub_resource type="Animation" id="Animation_gnv55"]
resource_name = "show_menu"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0056407065),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0056407065),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Button2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Button:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Main Manu Label:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Candle Menu:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(160, 1400), Vector2(160, 700)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Candle Menu:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Candle Menu:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(5, 5)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Background Animated:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.5648365, 0.51874244, 0.9208838, 1), Color(0.09803922, 0.6627451, 0.6862745, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b7svq"]
_data = {
&"RESET": SubResource("Animation_xg7my"),
&"hide_menu": SubResource("Animation_wmo1h"),
&"show_menu": SubResource("Animation_gnv55")
}

[sub_resource type="RichTextEffect" id="RichTextEffect_b7svq"]
script = ExtResource("6_gnv55")
metadata/_custom_type_script = "uid://1w16umy3lb4q"

[node name="MainMenu" type="Control" unique_id=466916617]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_gnv55")
script = ExtResource("1_vytfc")

[node name="Button" type="Button" parent="." unique_id=2094343631]
z_index = 2
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -468.0
offset_top = -200.0
offset_right = -137.0
offset_bottom = -124.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "PLAY"

[node name="ButtonEffectsModule" type="Node" parent="Button" unique_id=720458816]
script = ExtResource("3_b7svq")
metadata/_custom_type_script = "uid://dadsukldygahu"

[node name="Button2" type="Button" parent="." unique_id=530460084]
z_index = 2
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -468.0
offset_top = -110.0
offset_right = -137.0
offset_bottom = -34.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "LANGUAGE"

[node name="ButtonEffectsModule" type="Node" parent="Button2" unique_id=1728946394]
script = ExtResource("3_b7svq")
metadata/_custom_type_script = "uid://dadsukldygahu"

[node name="Level Show Info" parent="." unique_id=443533315 instance=ExtResource("3_xg7my")]
layout_mode = 1

[node name="Background Animated" type="Control" parent="." unique_id=230777307]
modulate = Color(0.09877711, 0.6643007, 0.68718815, 1)
anchors_preset = 0
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Video" type="VideoStreamPlayer" parent="Background Animated" unique_id=2107253081]
z_index = -2
texture_filter = 1
layout_mode = 0
offset_left = 178.0
offset_top = -184.0
offset_right = 434.0
offset_bottom = 72.0
rotation = 0.7853982
mouse_filter = 2
stream = ExtResource("3_t475i")
autoplay = true
loop = true

[node name="Video2" type="VideoStreamPlayer" parent="Background Animated" unique_id=302371918]
z_index = -2
texture_filter = 1
layout_mode = 0
offset_left = 359.0
offset_top = -2.9999847
offset_right = 615.0
offset_bottom = 253.00002
rotation = 0.7853982
mouse_filter = 2
stream = ExtResource("3_t475i")
autoplay = true
loop = true

[node name="Video3" type="VideoStreamPlayer" parent="Background Animated" unique_id=948264958]
z_index = -2
texture_filter = 1
layout_mode = 0
offset_left = -2.9806519
offset_top = -3.0
offset_right = 253.01935
offset_bottom = 253.0
rotation = 0.7853982
mouse_filter = 2
stream = ExtResource("3_t475i")
autoplay = true
loop = true

[node name="Video4" type="VideoStreamPlayer" parent="Background Animated" unique_id=149110937]
z_index = -2
texture_filter = 1
layout_mode = 0
offset_left = 178.01933
offset_top = 178.0
offset_right = 434.01935
offset_bottom = 434.0
rotation = 0.7853982
mouse_filter = 2
stream = ExtResource("3_t475i")
autoplay = true
loop = true

[node name="Video5" type="VideoStreamPlayer" parent="Background Animated" unique_id=1826876530]
z_index = -2
texture_filter = 1
layout_mode = 0
offset_left = 902.0
offset_top = -184.0
offset_right = 1158.0
offset_bottom = 72.0
rotation = 0.7853982
mouse_filter = 2
stream = ExtResource("3_t475i")
autoplay = true
loop = true

[node name="Video6" type="VideoStreamPlayer" parent="Background Animated" unique_id=1768132766]
z_index = -2
texture_filter = 1
layout_mode = 0
offset_left = 540.01935
offset_top = -184.0
offset_right = 796.01935
offset_bottom = 72.0
rotation = 0.7853982
mouse_filter = 2
stream = ExtResource("3_t475i")
autoplay = true
loop = true

[node name="Video7" type="VideoStreamPlayer" parent="Background Animated" unique_id=1678845339]
z_index = -2
texture_filter = 1
layout_mode = 0
offset_left = 721.0
offset_top = -3.0
offset_right = 977.0
offset_bottom = 253.0
rotation = 0.7853982
mouse_filter = 2
stream = ExtResource("3_t475i")
autoplay = true
loop = true

[node name="Video8" type="VideoStreamPlayer" parent="Background Animated" unique_id=2141240117]
z_index = -2
texture_filter = 1
layout_mode = 0
offset_left = 902.0
offset_top = 178.0
offset_right = 1158.0
offset_bottom = 434.0
rotation = 0.7853982
mouse_filter = 2
stream = ExtResource("3_t475i")
autoplay = true
loop = true

[node name="Video9" type="VideoStreamPlayer" parent="Background Animated" unique_id=1407802046]
z_index = -2
texture_filter = 1
layout_mode = 0
offset_left = 540.01935
offset_top = 178.0
offset_right = 796.01935
offset_bottom = 434.0
rotation = 0.7853982
mouse_filter = 2
stream = ExtResource("3_t475i")
autoplay = true
loop = true

[node name="Video10" type="VideoStreamPlayer" parent="Background Animated" unique_id=838714691]
z_index = -2
texture_filter = 1
layout_mode = 0
offset_left = 721.0193
offset_top = 359.0
offset_right = 977.0193
offset_bottom = 615.0
rotation = 0.7853982
mouse_filter = 2
stream = ExtResource("3_t475i")
autoplay = true
loop = true

[node name="Video11" type="VideoStreamPlayer" parent="Background Animated" unique_id=354144215]
z_index = -2
texture_filter = 1
layout_mode = 0
offset_left = 1083.0193
offset_top = -3.0
offset_right = 1339.0193
offset_bottom = 253.0
rotation = 0.7853982
mouse_filter = 2
stream = ExtResource("3_t475i")
autoplay = true
loop = true

[node name="Video12" type="VideoStreamPlayer" parent="Background Animated" unique_id=334584083]
z_index = -2
texture_filter = 1
layout_mode = 0
offset_left = 1083.0
offset_top = 359.0
offset_right = 1339.0
offset_bottom = 615.0
rotation = 0.7853982
mouse_filter = 2
stream = ExtResource("3_t475i")
autoplay = true
loop = true

[node name="Video13" type="VideoStreamPlayer" parent="Background Animated" unique_id=1917553412]
z_index = -2
texture_filter = 1
layout_mode = 0
offset_left = 902.0193
offset_top = 540.0
offset_right = 1158.0193
offset_bottom = 796.0
rotation = 0.7853982
mouse_filter = 2
stream = ExtResource("3_t475i")
autoplay = true
loop = true

[node name="Video14" type="VideoStreamPlayer" parent="Background Animated" unique_id=483256174]
z_index = -2
texture_filter = 1
layout_mode = 0
offset_left = 1264.0193
offset_top = 178.0
offset_right = 1520.0193
offset_bottom = 434.0
rotation = 0.7853982
mouse_filter = 2
stream = ExtResource("3_t475i")
autoplay = true
loop = true

[node name="Video15" type="VideoStreamPlayer" parent="Background Animated" unique_id=229103615]
z_index = -2
texture_filter = 1
layout_mode = 0
offset_left = 359.01935
offset_top = 359.0
offset_right = 615.01935
offset_bottom = 615.0
rotation = 0.7853982
mouse_filter = 2
stream = ExtResource("3_t475i")
autoplay = true
loop = true

[node name="Video16" type="VideoStreamPlayer" parent="Background Animated" unique_id=1035792181]
z_index = -2
texture_filter = 1
layout_mode = 0
offset_left = 540.0193
offset_top = 540.0
offset_right = 796.0193
offset_bottom = 796.0
rotation = 0.7853982
mouse_filter = 2
stream = ExtResource("3_t475i")
autoplay = true
loop = true

[node name="Video17" type="VideoStreamPlayer" parent="Background Animated" unique_id=374386623]
z_index = -2
texture_filter = 1
layout_mode = 0
offset_left = -2.980667
offset_top = 359.0
offset_right = 253.01933
offset_bottom = 615.0
rotation = 0.7853982
mouse_filter = 2
stream = ExtResource("3_t475i")
autoplay = true
loop = true

[node name="Video18" type="VideoStreamPlayer" parent="Background Animated" unique_id=1004289106]
z_index = -2
texture_filter = 1
layout_mode = 0
offset_left = 178.01935
offset_top = 540.0
offset_right = 434.01935
offset_bottom = 796.0
rotation = 0.7853982
mouse_filter = 2
stream = ExtResource("3_t475i")
autoplay = true
loop = true

[node name="Video19" type="VideoStreamPlayer" parent="Background Animated" unique_id=2139235776]
z_index = -2
texture_filter = 1
layout_mode = 0
offset_left = 1264.0001
offset_top = -184.0
offset_right = 1520.0001
offset_bottom = 72.0
rotation = 0.7853982
mouse_filter = 2
stream = ExtResource("3_t475i")
autoplay = true
loop = true

[node name="OldLabels" type="Node" parent="." unique_id=1372811638]

[node name="LabelTimes" type="Label" parent="OldLabels" unique_id=1774430224]
visible = false
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 36.0
offset_right = 359.0
offset_bottom = -488.0
grow_vertical = 2
theme_override_constants/line_spacing = 10
theme_override_font_sizes/font_size = 32
text = "TIMES"
vertical_alignment = 1

[node name="LabelTimesRecord" type="Label" parent="OldLabels" unique_id=1766922494]
visible = false
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 36.0
offset_top = 106.0
offset_right = 359.0
grow_vertical = 2
theme_override_constants/line_spacing = 10
theme_override_font_sizes/font_size = 32
text = "TIMES-LOG"
vertical_alignment = 1

[node name="LabelDay" type="Label" parent="OldLabels" unique_id=1314790330]
visible = false
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 348.0
offset_right = 671.0
offset_bottom = -488.0
grow_vertical = 2
theme_override_constants/line_spacing = 10
theme_override_font_sizes/font_size = 32
text = "DAY"
vertical_alignment = 1

[node name="LabelDayRecord" type="Label" parent="OldLabels" unique_id=1659871211]
visible = false
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 348.0
offset_top = 106.0
offset_right = 671.0
grow_vertical = 2
theme_override_constants/line_spacing = 10
theme_override_font_sizes/font_size = 32
text = "DAY-LOG"
vertical_alignment = 1

[node name="LabelHour" type="Label" parent="OldLabels" unique_id=545510680]
visible = false
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 545.0
offset_right = 868.0
offset_bottom = -488.0
grow_vertical = 2
theme_override_constants/line_spacing = 10
theme_override_font_sizes/font_size = 32
text = "HOUR"
vertical_alignment = 1

[node name="LabelHourRecord" type="Label" parent="OldLabels" unique_id=2008669838]
visible = false
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 545.0
offset_top = 106.0
offset_right = 868.0
grow_vertical = 2
theme_override_constants/line_spacing = 10
theme_override_font_sizes/font_size = 32
text = "HOUR-LOG"
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=970050374]
libraries/ = SubResource("AnimationLibrary_b7svq")

[node name="Main Manu Label" type="RichTextLabel" parent="." unique_id=1383643080]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -712.0
offset_top = 69.0
offset_right = -88.0
offset_bottom = 325.0
grow_horizontal = 0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 100
theme_override_font_sizes/italics_font_size = 100
bbcode_enabled = true
text = "[pulse freq=.3 ease=2.0][wave][title-effect][i]Main-Title[/i][/title-effect][/wave][/pulse]"
scroll_active = false
horizontal_alignment = 1
custom_effects = [SubResource("RichTextEffect_b7svq")]

[node name="Candle Menu" parent="." unique_id=1463863104 instance=ExtResource("5_wmo1h")]
position = Vector2(160, 700)
scale = Vector2(5, 5)

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="button_up" from="Button2" to="." method="on_language_pressed"]
